# proairag

./: .env.example  .gitignore  AGENTS.md  Dockerfile  MCP_SERVER.md  PLAN_DASHBOARD.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  test_dashboard.py
docs/plans/: 2026-06-09-hybrid-tenant-rag.md  rbac-intra-tenant.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: index.css  main.tsx  router.tsx
migrations/: AGENTS.md
migrations/cypher/: 001_constraints.cypher  002_indexes.cypher  003_department.cypher
migrations/sql/: 001_create_tenants.sql  002_create_documents.sql  003_create_chunks.sql  004_create_departments_users.sql  005_rls_policies.sql  006_rls_departments.sql  007_create_conversations.sql  008_create_tenant_settings.sql  009_add_llm_max_tokens.sql  010_add_super_admin.sql  011_performance_indexes.sql  012_rls_conversations_messages.sql
src/: AGENTS.md  config.py  main.py  mcp_server.py
src/api/: AGENTS.md  admin.py  auth.py  chat.py  departments.py  documents.py  rag.py  rag_settings.py  tenants.py
src/db/: AGENTS.md  seed.py  session.py
src/graph/: AGENTS.md  entity_extractor.py  graph_sync.py  neo4j_client.py
src/middleware/: AGENTS.md  tenant.py
src/models/: AGENTS.md  __init__.py  chunk.py  conversation.py  department.py  document.py  message.py  tenant.py  tenant_settings.py  user.py  user_department.py
src/schemas/: AGENTS.md  auth.py  chat.py  (+5 more)
tests/: AGENTS.md  conftest.py  test_auth.py  test_department_isolation.py  test_mcp_server.py  test_tenant_isolation.py
(+43 files in other folders)
