[project]
name = "proairag"
version = "0.1.0"
description = "Hybrid multi-tenant RAG with relational isolation and graph reasoning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "neo4j>=5.20.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt<5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
embedding = [
    "sentence-transformers>=3.0.0",  # Inclut torch (~2Go)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: Unit tests with mocks (no DB required)",
    "integration: Integration tests with real Docker database",
]
addopts = [
    "-v",
    "--tb=short",
]

[tool.ruff]
line-length = 100
